.featured-articles-container grid changed to flex and gap fix

--- a/assets/css/articles.scss
+++ b/assets/css/articles.scss
@@ -53,12 +53,19 @@ $article-card-hover-brightness: 30%;
 
 
 .featured-article-big{
+	// display: flex;
+	// flex: 0 0 clamp(20px, 20% 200px);
+	// flex: 0 0 clamp(20px, 50px, 200px);
+	// flex: 0 0 clamp(250px, 15%, 400px);
+	// flex: 0 0 clamp(265px, 15%, 400px);
+	flex: 0 0 clamp(250px, 265px, 400px);
+	// flex: 0 0 100px;
 
 	// position: inherit;
 	overflow: hidden;
 	position: relative;
-	width: 100%;
-	height: 100%;
+	// width: 100%;
+	// height: 100%;
 	// height: 50%;
 	// width: 300px;
 	// height: 300px;
@@ -370,6 +377,9 @@ $article-card-hover-brightness: 30%;
 	}
 }
 
+hgroup.featured-articles-container{
+	max-width: 1920px;
+}
 
 .featured-articles-container{
 	display: flex;
@@ -385,20 +395,27 @@ $article-card-hover-brightness: 30%;
 }
 
 .featured-articles-container section{
-	display: grid;
-	grid-template-columns: repeat(1, minmax(0, 1fr));
-	gap: 2rem 1.5rem;
-	max-width: 1280px;
+	// display: grid;
+	// grid-template-columns: repeat(1, minmax(0, 1fr));
+	// gap: 2rem 1.5rem;
+	// max-width: 1280px;
   
-	@media (min-width: 640px) {
-	  grid-template-columns: repeat(2, minmax(0, 1fr));
-	  row-gap: 3rem;
-	}
+	// @media (min-width: 640px) {
+	//   grid-template-columns: repeat(2, minmax(0, 1fr));
+	//   row-gap: 3rem;
+	// }
   
-	@media (min-width: 1024px) {
-	  grid-template-columns: repeat(3, minmax(0, 1fr));
-	}
-  }
+	// @media (min-width: 1024px) {
+	//   grid-template-columns: repeat(3, minmax(0, 1fr));
+	// }
+
+	display: flex;
+	flex-wrap: wrap;
+	gap: 1em;
+	// gap: 0px;
+	justify-content: center;
+	align-content: stretch;
+}
 
 
 article.articles-content{
